syntax = "proto3";

package toy;

option go_package = "schema/usergrpc";

service UserService {
    rpc GetUserByName(GetUserByNameReq) returns (GetUserByNameResponse);
}

message GetUserByNameReq {
    string name = 1;
}

message User {
    string id = 1;
    string username = 2;
    string password_hash = 3;
}

message GetUserByNameResponse {
    User user = 1;
}
